Making a project After learning grid

--- a/GridProject/index.html
+++ b/GridProject/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
+
     <title>Document</title>
 </head>
 <body>
@@ -21,9 +23,21 @@
             <h5>News Article</h5>
             <h5>Contact</h5>
         </div>
-        <div id="left-center"></div>
-        <div id="left-bottom"></div>
-        <div id="right"></div>
+        <div id="left-center">
+            <h1>Select</h1>
+            <h1>Fashion</h1>
+            <h1>Mod.05</h1>
+            <h1>Scene</h1>
+        </div>
+        <div id="left-bottom">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur commodi temporibus, sapiente exercitationem neque tempore voluptatem doloribus saepe libero fuga recusandae doloremque qui nesciunt ipsam! Pariatur dicta explicabo consectetur placeat.</p>
+        </div>
+        <div id="right">
+            <video autoplay loop muted src="video1.mp4"></video>
+        </div>
+        <div id="arrow">
+           <i class="fa-solid fa-arrow-right"></i>
+        </div>
     </div>
 </body>
 </html>
