after all errors

--- a/GridProject/index.html
+++ b/GridProject/index.html
@@ -30,7 +30,7 @@
             <h1>Scene</h1>
         </div>
         <div id="left-bottom">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur commodi temporibus, sapiente exercitationem neque tempore voluptatem doloribus saepe libero fuga recusandae doloremque qui nesciunt ipsam! Pariatur dicta explicabo consectetur placeat.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur commodi temporibus, sapiente exercitationem neque tempore voluptatem doloribus saepe libero fuga recusandae.</p>
         </div>
         <div id="right">
             <video autoplay loop muted src="video1.mp4"></video>
