Today doing practise on media query

--- a/GridProject/P1/index.html
+++ b/GridProject/P1/index.html
@@ -16,7 +16,7 @@
             background-color: yellow;
         }
         p{
-            border:;
+            border: 1px solid brown; 
         }
     </style>
 </head>
