--- a/may28/Recipe/index.html
+++ b/may28/Recipe/index.html
@@ -29,7 +29,74 @@
       </header>   
     <main>
         <div class="contentBox">
-            Item1
+           <!-- item1 -->
+         <section>
+           <div class="item">
+            <div class="leftBox">
+              <!-- heading -->
+               <h2>Gulab Jamun</h2>
+
+               <div>
+                 <h2>Ingredients</h2>
+                 <ul class="ingBox">
+                  <li>Sugar</li>
+                  <li>Bread</li>
+                  <li>Oil</li>
+                 </ul>
+               </div>
+
+               <div>
+                  <h2>Recipe</h2>
+                  <ol class="recBox">
+                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque, explicabo.</li>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+                    <li>Lorem ipsum dolor sit amet, consectetur.</li>
+                  </ol>
+               </div>
+            </div>
+
+            <div class="rightBox">
+               <img src="img2.jpeg" alt="">
+               <div class="overlay">
+                <span>Click Here To Buy
+                </span>
+               </div>
+            </div>
+           </div>
+         </section>
+             <!-- item1 -->
+         <section>
+           <div class="item">
+            <div class="leftBox">
+              <!-- heading -->
+               <h2>Barfi</h2>
+
+               <div>
+                 <h2>Ingredients</h2>
+                 <ul>
+                  <li>Sugar</li>
+                  <li>Bread</li>
+                  <li>Oil</li>
+                 </ul>
+               </div>
+
+               <div>
+                  <h2>Recipe</h2>
+                  <ol>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque, explicabo.</li>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+                    <li>Lorem ipsum dolor sit amet, consectetur.</li>
+                  </ol>
+               </div>
+            </div>
+            
+            <div class="rightBox">
+               <img src="img1.jpeg" alt="">
+            </div>
+           </div>
+         </section>
         </div>
     </main>
     <footer>
