--- a/PremierProject/index.html
+++ b/PremierProject/index.html
@@ -82,20 +82,78 @@
 
         </div>
         <div id="page2">
-            <div id="part1"></div>
+            <div id="part1">
+
+            </div>
             <div id="part2">
                 <img src="https://images.unsplash.com/photo-1733838069475-f2e01a7f9e5b?w=1000&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8TW9kZWwlMjBob3QlMjBwaWNzfGVufDB8fDB8fHww" alt="">
                 <div id="part-2-content">
-                    <p id ='p1'>Hannah Motler <br>
+                    <div id="h3">
+                      <h3>Hannah Motler <br>
                        Features in a <br>
                        fashion story by <br> the lake for <br> 
                        Vogue new Shot  
+                    </h3>
+                </div >
+                    <div id="p2">
+                    <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, dolorem magnam! Impedit reiciendis aut natus ipsam harum? Deserunt, distinctio numquam!
                     </p>
-                    <p id="p2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, dolorem magnam! Impedit reiciendis aut natus ipsam harum? Deserunt, distinctio numquam!
-                    </p>
+                    </div>
+                    
                 </div>
             </div>
         </div>
+        <div id="page3">
+            <h1>Updates</h1>
+            <div class="elem">
+                <img src="https://images.unsplash.com/photo-1527010154944-f2241763d806?w=1000&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8bWVucyUyMGZhc2hpb258ZW58MHx8MHx8fDA%3D" alt="">
+                <h4>Mens Fashion</h4>
+                   <div class="elem-part2"> 
+                    <h1>Khadim & Tom Ford</h1>
+                    <h5>25th March 2020</h5>
+
+
+                   </div>
+            </div>
+            <div class="elem">
+                <img src="https://plus.unsplash.com/premium_photo-1689371957762-b5f8d601933e?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fHdvbWVuJTIwZmFzaGlvbnxlbnwwfHwwfHx8MA%3D%3D" alt="">
+                <h4>Womens Fashion</h4>
+                   <div class="elem-part2"> 
+                    <h1>Arena Home</h1>
+                    <h5>23rd February 2020</h5>
+
+
+                   </div>
+            </div>
+            <div class="elem">
+                <img src="https://media.istockphoto.com/id/621975996/photo/beautiful-woman-in-the-city.webp?a=1&b=1&s=612x612&w=0&k=20&c=8Mb3CTVVVRt_nmhp3EtG6nMPaWljEhPRJf4_sgrkFwM=" alt="">
+                <h4>Special View</h4>
+                   <div class="elem-part2"> 
+                    <h1>Jing for Wonderland</h1>
+                    <h5>14 January 2020</h5>
+
+
+                   </div>
+            </div>
+            <div class="elem">
+                <img src="https://plus.unsplash.com/premium_photo-1665218520872-d4c047840ce6?w=1000&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fG1vZGVsJTIwdGFsa3xlbnwwfHwwfHx8MA%3D%3D" alt="">
+                <h4>Models Talk</h4>
+                   <div class="elem-part2"> 
+                    <h1>Glass x Belle</h1>
+                    <h5>08th January 2020</h5>
+
+
+                   </div>
+            </div>
+        </div>
+        <div id="marque">
+          <h1>Premier model 2020</h1>
+          <h1>Premier model 2020</h1>
+          <h1>Premier model 2020</h1>
+          <h1>Premier model 2020</h1>
+          <h1>Premier model 2020</h1>
+        </div>
+        <div id="footer"></div>
     </div>
 </body>
 </html>
