--- a/PremierProject/index.html
+++ b/PremierProject/index.html
@@ -15,6 +15,7 @@
            <h2>Women/Men</h2>
            <h2>Agency/Blog/Information</h2>
            <h2><i class="fa-solid fa-magnifying-glass"></i></h2>
+           <h3><i class="fa-solid fa-bars-staggered"></i></h3>
         </div>
         <div id="center">
             <div id="content">
