complete a project on grid project 1

--- a/may30/newGrid/Project1/index.html
+++ b/may30/newGrid/Project1/index.html
@@ -25,7 +25,7 @@
                         >
                     </a>
                     <div id="card-title-container">
-                        <a href="#">
+                        <a href="#" id="card-title-anchor">
                             <h2 id="card-title">New Gadgets Released</h2>
                         </a>
                         <p id="card-desc">Check out our latest tech gadgets hitting the market, from smartphones to smartwatches.</p>
