--- a/ShadowStudio/index.html
+++ b/ShadowStudio/index.html
@@ -13,11 +13,20 @@
             <nav>
              <img src="img.svg" alt="">
              <div id="nav-part2">
-                <h4>Work</h4>
-                <h4>Studio</h4>
-                <h4>Contact</h4>
+                <h4><a href="">Work</a></h4>
+                <h4><a href="">Studio</a></h4>
+                <h4><a href="">Contact</a></h4>
              </div>   
             </nav>
+            <div id="center">
+                <div id="left">
+                    <h3>Sundown is a multi-disciplinary studio focused on creating unique ,end-to-end experiences and environments.</h3>
+                </div>
+                <div id="right">
+                    <h1>SPACES <br>THAT <br> INSPIRE</h1>
+                </div>
+            </div>
+            <video src="./video.mp4" autoplay loop muted></video>
         </div>
     </div>
     <script src="script.js"></script>
