--- a/ShadowStudio/index.html
+++ b/ShadowStudio/index.html
@@ -26,6 +26,11 @@
                     <h1>SPACES <br>THAT <br> INSPIRE</h1>
                 </div>
             </div>
+            <div id="hero-shape">
+                <div id="hero-1"></div>
+                <div id="hero-2"></div>
+                <div id="hero-3"></div>
+            </div>
             <video src="./video.mp4" autoplay loop muted></video>
         </div>
     </div>
