making an marque animation

--- a/ShadowStudio/index.html
+++ b/ShadowStudio/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sundown Studio</title>
+    <link rel="shortcut icon" href="icon.png.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -33,7 +35,48 @@
             </div>
             <video src="./video.mp4" autoplay loop muted></video>
         </div>
+        <div id="page2">
+            <div id="moving-text">
+                <div class="con">
+                    <h1>EXPERIENCE</h1>
+                    <div id="gola"></div>
+                 <h1>
+                    CONTENT
+                </h1>
+                 <div id="gola"></div>
+                <h1>
+                    ENVIRONMENTS
+                </h1>
+                 <div id="gola"></div>
+                </div>
+                <div class="con">
+                    <h1>EXPERIENCE</h1>
+                     <div id="gola"></div>
+                 <h1>
+                    CONTENT
+                </h1>
+                 <div id="gola"></div>
+                <h1>
+                    ENVIRONMENTS
+                </h1>
+                 <div id="gola"></div>
+               </div>
+               <div class="con">
+                    <h1>EXPERIENCE</h1>
+                     <div id="gola"></div>
+                 <h1>
+                    CONTENT
+                </h1>
+                 <div id="gola"></div>
+                <h1>
+                    ENVIRONMENTS
+                </h1>
+                 <div id="gola"></div>
+                </div>
+            </div>
+        </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
